Closed
Bug 626841
Opened 15 years ago
Closed 15 years ago
Firefox 4.0b10pre crash in [@ nsAccessible::Role() ][@ nsAccessible::Role ]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla2.0b10
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | betaN+ |
People
(Reporter: marcia, Assigned: surkov)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
2.27 KB,
patch
|
davidb
:
review+
|
Details | Diff | Splinter Review |
Seen while reviewing crash stats. Crashes started showing up using 2011011800 build. http://tinyurl.com/4m548qr to the crashes which are all Windows.
Possible Pushlog regression range: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=66addc5c30ca&tochange=eb105fe0e41c
Frame Module Signature [Expand] Source
0 xul.dll nsAccessible::Role accessible/src/base/nsAccessible.h:151
1 xul.dll nsDocAccessible::UpdateTree accessible/src/base/nsDocAccessible.cpp:1898
2 xul.dll nsDocAccessible::ProcessContentInserted accessible/src/base/nsDocAccessible.cpp:1861
3 xul.dll NotificationController::ContentInsertion::Process accessible/src/base/NotificationController.cpp:551
4 xul.dll NotificationController::WillRefresh accessible/src/base/NotificationController.cpp:195
5 xul.dll nsRefreshDriver::Notify layout/base/nsRefreshDriver.cpp:254
6 xul.dll nsTimerImpl::Fire xpcom/threads/nsTimerImpl.cpp:428
7 xul.dll nsTimerEvent::Run xpcom/threads/nsTimerImpl.cpp:517
8 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:633
9 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:110
10 xul.dll xul.dll@0xb2632b
11 xul.dll MessageLoop::RunInternal ipc/chromium/src/base/message_loop.cc:219
12 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:202
13 mozcrt19.dll _VEC_memzero
14 xul.dll xul.dll@0x35b00f
15 firefox.exe firefox.exe@0x1bb7
16 ntdll.dll ntdll.dll@0x71ecc
17 ntdll.dll ntdll.dll@0x39ea4
18 firefox.exe firefox.exe@0x186f
19 firefox.exe firefox.exe@0x186f
| Reporter | ||
Comment 1•15 years ago
|
||
Regression from Bug 626841? Adding Trevor.
Comment 2•15 years ago
|
||
(In reply to comment #1)
> Regression from Bug 626841?
Marcia I think you mis-pasted?
Unfortunately I suspect:
http://hg.mozilla.org/mozilla-central/rev/eb105fe0e41c
| Assignee | ||
Comment 3•15 years ago
|
||
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #504973 -
Flags: review?(bolterbugz)
| Assignee | ||
Updated•15 years ago
|
blocking2.0: --- → ?
Comment 4•15 years ago
|
||
Comment on attachment 504973 [details] [diff] [review]
patch
r=me, looks good.
Attachment #504973 -
Flags: review?(bolterbugz) → review+
Updated•15 years ago
|
blocking2.0: ? → betaN+
Comment 5•15 years ago
|
||
Fast, speedy service. I like.
| Assignee | ||
Comment 6•15 years ago
|
||
landed on 2.0 - http://hg.mozilla.org/mozilla-central/rev/94271581b601
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b10
Updated•15 years ago
|
OS: Windows 7 → All
Summary: Firefox 4.0b10pre crash in [@ nsAccessible::Role() ] → Firefox 4.0b10pre crash in [@ nsAccessible::Role() ][@ nsAccessible::Role ]
Updated•14 years ago
|
Crash Signature: [@ nsAccessible::Role() ]
[@ nsAccessible::Role ]
You need to log in
before you can comment on or make changes to this bug.
Description
•